- Cleanup in notation export code
- Fixed dialog deletion for notation export and custom tuning picker, should fix hangs (and possible crashes) on shutdown
- Imported midi files now prperly suggest a file name when e.g. re-saving them
- Added close button to main window (especially useful on linux)
- Fixed yet more bugs with multiple time sig changes

=====================================================================================
Version 1.1 new features highlight
* Fixed countless crashes, bugs and glitches
* Added new score editor
* New undo system that is faster, works in controller editor and allows multiple undos
* Added italian translation
* Major code cleanup and refactoring
* Removed useless stuff from .aria files, making them significantly smaller
* Linux port improved by leaps and bounds, slowly getting more stable
* Major improvements to build system
* Improved document icon
* Added mouse wheels support to vertically scroll tracks
* Made document saving data loss-safe : if a problem occurs while an aria file is being saved, no data loss will occur
======================================================================================

1.1
- Fixed behaviour when closing last document
- Fixed undoing vertical moves in score, when there's accidentals
- Fixed incorrect display of triplets in complex songs
- Fixed incorrect note beaming when making notes of different lengths play at the same time
- Improved handling of whole notes playing along chords
- Improved handling of ties with chords
- Fixed many cases of incorrect silence rendering

 1.1b8
- Hopefully fixed compatiblity problems with intel Tiger systems
- Fixed crash when importing invalid midis
- More improvements to scons build system
- Fixed undoing shift+up/down in score editor
- Made saving aria files safe : your file is not deleted until the new one is successfully written
- Switched some small variables from int to short
 
 1.1b7