@@ -8,6 +8,7 @@
 - Imported midi files now prperly suggest a file name when e.g. re-saving them
 - Added close button to main window (especially useful on linux)
 - Fixed yet more bugs with multiple time sig changes
+- Fixed importing midi files where events are [incorrectly] not in time order
 
 =====================================================================================
 Version 1.1 new features highlight
